Made use of AuditableEntityService in SettingsController, fixed the error handling and NumberFormatException in SettingsControllerTest class.
git-svn-id: https://svn.kuali.org/repos/student/contrib/ksa/trunk@40429 0ac02d80-fb3f-11dc-a574-c57244a850eb