@@ -4,7 +4,8 @@ import com.sigmasys.kuali.ksa.krad.form.SettingsForm;
 import com.sigmasys.kuali.ksa.model.AuditableEntity;
 import com.sigmasys.kuali.ksa.model.Currency;
 import com.sigmasys.kuali.ksa.model.Rollup;
-import com.sigmasys.kuali.ksa.service.PersistenceService;
+import com.sigmasys.kuali.ksa.service.AuditableEntityService;
+import com.sigmasys.kuali.ksa.service.CurrencyService;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -15,6 +16,7 @@ import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.servlet.ModelAndView;
 
 import javax.servlet.http.HttpServletRequest;
+import java.util.ArrayList;
 import java.util.List;
 
 
@@ -27,11 +29,11 @@ public class SettingsController extends GenericSearchController {
 
     private static final Log logger = LogFactory.getLog(SponsorController.class);
 
-    //@Autowired
-    //private CurrencyService currencyService;
+    @Autowired
+    private CurrencyService currencyService;
 
     @Autowired
-    private PersistenceService persistenceService;
+    private AuditableEntityService auditableEntityService;
 
     /**
      * @see org.kuali.rice.krad.web.controller.UifControllerBase#createInitialForm(javax.servlet.http.HttpServletRequest)
@@ -54,6 +56,7 @@ public class SettingsController extends GenericSearchController {
         // do get stuff...
         String viewId = request.getParameter("viewId");
         String pageId = request.getParameter("pageId");
+
         // a record index from a table selection or a known currencyId
         String currencyId = request.getParameter("currencyId");
         String entityId = request.getParameter("entityId");
@@ -69,24 +72,26 @@ public class SettingsController extends GenericSearchController {
             // this is not a persisted currency. currencyId should be null - table record index
             form.setCurrency(new Currency());
             // this is the existing currencies in the system
-            form.setCurrencies(persistenceService.getEntities(Currency.class));
+            form.setCurrencies(currencyService.getCurrencies());
 
         } else if ("CurrencyDetailsPage".equals(pageId)) {
-            if (currencyId == null || currencyId.isEmpty()) {
+            if (currencyId == null || currencyId.trim().isEmpty()) {
                 throw new IllegalArgumentException("'currencyId' request parameter must be specified");
             }
             // editing an existing currency
-            form.setCurrency(persistenceService.getEntity(new Long(currencyId), Currency.class));
+            form.setCurrency(currencyService.getCurrency(Long.valueOf(currencyId)));
         } else if ("RollupPage".equals(pageId)) {
             form.setAuditableEntity(new Rollup());
-            List<Rollup> e = persistenceService.getEntities(Rollup.class);
-            form.setAuditableEntities((List<AuditableEntity>) (List<?>) e);
+            List<Rollup> rollups = auditableEntityService.getAuditableEntities(Rollup.class);
+            List<AuditableEntity> entities = new ArrayList<AuditableEntity>(rollups.size());
+            entities.addAll(rollups);
+            form.setAuditableEntities(entities);
         } else if ("RollupDetailsPage".equals(pageId)) {
-            if (entityId == null || entityId.isEmpty()) {
+            if (entityId == null || entityId.trim().isEmpty()) {
                 throw new IllegalArgumentException("'entityId' request parameter must be specified");
             }
             // editing an existing currency
-            form.setAuditableEntity(persistenceService.getEntity(new Long(entityId), Rollup.class));
+            form.setAuditableEntity(auditableEntityService.getAuditableEntity(Long.valueOf(entityId), Rollup.class));
         }
 
         return getUIFModelAndView(form);
@@ -106,7 +111,7 @@ public class SettingsController extends GenericSearchController {
         // this is not a persisted currency
         form.setCurrency(new Currency());
         // this is the existing currencies in the system
-        form.setCurrencies(persistenceService.getEntities(Currency.class));
+        form.setCurrencies(currencyService.getCurrencies());
         // clear the status message
         form.setStatusMessage("");
 
@@ -120,49 +125,24 @@ public class SettingsController extends GenericSearchController {
     @RequestMapping(method = RequestMethod.POST, params = "methodToCall=insertCurrency")
     public ModelAndView insertCurrency(@ModelAttribute("KualiForm") SettingsForm form) {
 
-        // do insert stuff...
-        String statusMsg = "";
-
-        // the view requires/validates the code and symbol value inputs exist, not the description
-
-        // check for duplicate before persisting
-        Currency tmpCurrency = form.getCurrency();
-        String currencyCode = tmpCurrency.getCode();
-        try {
-            tmpCurrency = persistenceService.getEntity(new Long(currencyCode), Currency.class);
-            // existing currency in the system found. Leave the currency information in the view
-            statusMsg = "Existing Currency code " + tmpCurrency.getCode() + " found";
-            form.setStatusMessage(statusMsg);
-            logger.error(statusMsg);
-            return getUIFModelAndView(form);
-        } catch (IllegalArgumentException iae) {
-            // not found. log the message exception and continue
-            logger.error(iae.getMessage(), iae);
-            form.setStatusMessage(iae.getMessage());
-        }
-
         // a record id is returned from persisting
         // need to add a create method possibly to enforce business rules
         Currency currency = form.getCurrency();
-        Long saveResult = persistenceService.persistEntity(currency);
 
-        if (saveResult > 0) {
-            // a currency instance for the view and model.
-            // this is not a persisted currency.
-            // On insert we would provide the view with an initialized
-            // currency instance after persisting. User may add another
-            form.setCurrency(new Currency());
+        try {
+
+            currencyService.persistCurrency(currency);
 
             // refresh the list of currencies. the form and view manage the refresh
-            form.setCurrencies(persistenceService.getEntities(Currency.class));
+            form.setCurrencies(currencyService.getCurrencies());
 
             // success in creating the currency.
-            statusMsg = "Success: Currency code " + currency.getCode() + " saved";
+            String statusMsg = "Success: Currency " + currency.getCode() + " saved";
             form.setStatusMessage(statusMsg);
             logger.info(statusMsg);
-        } else {
+        } catch (Exception e) {
             // failed to create the currency. Leave the currency information in the view
-            statusMsg = "Failure: Currency code " + currency.getCode() + " did not save";
+            String statusMsg = "Failure: Currency " + currency.getCode() + " did not save. " + e.getMessage();
             form.setStatusMessage(statusMsg);
             logger.error(statusMsg);
         }
@@ -177,45 +157,31 @@ public class SettingsController extends GenericSearchController {
     @RequestMapping(method = RequestMethod.POST, params = "methodToCall=insertRollup")
     public ModelAndView insertRollup(@ModelAttribute("KualiForm") SettingsForm form) {
 
-        // do insert stuff...
-        String statusMsg = "";
-        String type = "Rollup";
-
-        // check for duplicate before persisting
-        AuditableEntity tmpEntity = form.getAuditableEntity();
-        if (!(tmpEntity instanceof Rollup)) {
-
-        }
-        String code = tmpEntity.getCode();
-        try {
-            tmpEntity = persistenceService.getEntity(new Long(code), Rollup.class);
-            if (tmpEntity != null) {
-                statusMsg = "Existing " + type + " code " + tmpEntity.getCode() + " found";
-                form.setStatusMessage(statusMsg);
-                logger.error(statusMsg);
-                return getUIFModelAndView(form);
-            }
-        } catch (IllegalArgumentException iae) {
-            // not found. log the message exception and continue
-            logger.error(iae.getMessage(), iae);
-            form.setStatusMessage(iae.getMessage());
-        }
-
         AuditableEntity entity = form.getAuditableEntity();
-        Long saveResult = persistenceService.persistEntity(entity);
+        if (!(entity instanceof Rollup)) {
+            String errMsg = "Entity must be of Rollup type";
+            logger.error(errMsg);
+            throw new IllegalStateException(errMsg);
+        }
 
-        if (saveResult > 0) {
-            form.setAuditableEntity(new Rollup());
+        try {
 
-            form.setAuditableEntities((List<AuditableEntity>) (List<?>) persistenceService.getEntities(Currency.class));
+            auditableEntityService.persistAuditableEntity(entity);
+
+            List<Rollup> rollups = auditableEntityService.getAuditableEntities(Rollup.class);
+            List<AuditableEntity> entities = new ArrayList<AuditableEntity>(rollups.size());
+            entities.addAll(rollups);
+
+            form.setAuditableEntities(entities);
 
             // success in creating the currency.
-            statusMsg = "Success: " + type + " code " + entity.getCode() + " saved";
+            String statusMsg = "Success: " + entity.getClass().getName() + " saved, ID = " + entity.getId();
             form.setStatusMessage(statusMsg);
             logger.info(statusMsg);
-        } else {
+        } catch (Exception e) {
             // failed to create the currency. Leave the currency information in the view
-            statusMsg = "Failure: " + type + " code " + entity.getCode() + " did not save";
+            String statusMsg = "Failure: " + entity.getClass().getName() + "entity did not save, ID = " + entity.getId() +
+                    ". " + e.getMessage();
             form.setStatusMessage(statusMsg);
             logger.error(statusMsg);
         }
@@ -231,28 +197,19 @@ public class SettingsController extends GenericSearchController {
     @RequestMapping(method = RequestMethod.POST, params = "methodToCall=updateCurrency")
     public ModelAndView updateCurrency(@ModelAttribute("KualiForm") SettingsForm form, HttpServletRequest request) {
 
-        // do update stuff...
-        String viewId = request.getParameter("viewId");
-        String pageId = request.getParameter("pageId");
-        // a record index from a table selection or a known currencyId
-        String currencyId = request.getParameter("currencyId");
-
-        String statusMsg = "";
-
-        logger.info("View: " + viewId + " Page: " + pageId + " Currency ID: " + currencyId);
-
         Currency currency = form.getCurrency();
-        // occurs in the detail page.
-        Long saveResult = persistenceService.persistEntity(currency);
 
-        if (saveResult > 0) {
+        // occurs in the detail page.
+        currencyService.persistCurrency(currency);
+
+        try {
             // success in updating the currency.
-            statusMsg = "Success: Currency code " + currency.getCode() + "updated";
+            String statusMsg = "Success: Currency with ID =  " + currency.getId() + " updated";
             form.setStatusMessage(statusMsg);
             logger.info(statusMsg);
-        } else {
+        } catch (Exception e) {
             // failed to update the currency. Leave the currency information in the view
-            statusMsg = "Failure: Currency code " + currency.getCode() + " did not update";
+            String statusMsg = "Failure: Currency with ID = " + currency.getId() + " did not update. " + e.getMessage();
             form.setStatusMessage(statusMsg);
             logger.error(statusMsg);
         }
@@ -262,33 +219,35 @@ public class SettingsController extends GenericSearchController {
 
     /**
      * @param form
-     * @param request
      * @return
      */
     @RequestMapping(method = RequestMethod.POST, params = "methodToCall=updateRollup")
-    public ModelAndView updateRollup(@ModelAttribute("KualiForm") SettingsForm form, HttpServletRequest request) {
+    public ModelAndView updateRollup(@ModelAttribute("KualiForm") SettingsForm form) {
 
-        String type = "Rollup";
-
-        return updateAuditableEntity(form, type);
+        return updateAuditableEntity(form, Rollup.class);
     }
 
-    private ModelAndView updateAuditableEntity(@ModelAttribute("KualiForm") SettingsForm form, String type) {
-
-        String statusMsg = "";
+    private <T extends AuditableEntity> ModelAndView updateAuditableEntity(@ModelAttribute("KualiForm")
+                                                                           SettingsForm form, Class<T> entityType) {
 
         AuditableEntity entity = form.getAuditableEntity();
-        // occurs in the detail page.
-        Long saveResult = persistenceService.persistEntity(entity);
 
-        if (saveResult > 0) {
+        if (!(entity.getClass().equals(entityType))) {
+            String errMsg = "Entity must be of " + entityType.getName() + " type";
+            logger.error(errMsg);
+            throw new IllegalStateException(errMsg);
+        }
+
+        try {
+            // occurs in the detail page.
+            auditableEntityService.persistAuditableEntity(entity);
             // success in updating the currency.
-            statusMsg = "Success: " + type + " code " + entity.getCode() + "updated";
+            String statusMsg = "Success: " + entityType + " entity updated. Entity ID =  " + entity.getId();
             form.setStatusMessage(statusMsg);
             logger.info(statusMsg);
-        } else {
+        } catch (Exception e) {
             // failed to update the currency. Leave the currency information in the view
-            statusMsg = "Failure: " + type + " code " + entity.getCode() + " did not update";
+            String statusMsg = "Failure: " + entityType + " entity did not update, Entity ID =  " + entity.getId() + ". " + e.getMessage();
             form.setStatusMessage(statusMsg);
             logger.error(statusMsg);
         }
